# devops-test

./: .env.example  .gitignore  Dockerfile  README.md  appspec_template.yml  buildspec.yml  docker-compose.yml  main.py  pyproject.toml  pytest.ini  run.sh  taskdef_template.json
tests/: test_healthcheck.py
