[tool.poetry]
name = "devops-app"
version = "0.1.0"
description = "DevOps Sample Application"
authors = ["Hieu Mai <hieumai@everfit.io>"]

[tool.poetry.dependencies]
python = "^3.12.5"
flask = "^2.1.1"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^2.8.1"
pytest-asyncio = "^0.20.3"
mypy = "^1.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

